--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -257,6 +257,7 @@ In the case of multiple unique molecular identifiers (e.g., one on each end of t
 
 \item[CB:Z:\tagvalue{str}]
 Cell identifier based on the cellular-barcode sequence ({\tt CR}), with a correction optionally applied. The sequence may optionally be followed by a dash (`{\tt -}') and one or more alphanumeric characters to form an identifier. All reads with the same {\tt CB} tag putatively derive from the same cell.
+In the case of the cell identifier being based on multiple cellular-barcode sequences the recommended implementation concatenates all the barcodes with a hyphen (`{\tt -}') between the different barcodes.
 
 \item[CR:Z:\tagvalue{str}]
 Cellular barcode. Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}. All reads with the same {\tt CR} tag putatively derive from the same cell. 
