--- a/VCFv4.1.tex
+++ b/VCFv4.1.tex
@@ -996,8 +996,8 @@ The BCF2 header begins with the ``BCF2 magic'' 5 bytes that encode
 {\tt BCF\em XY} where {\em X} and {\em Y} are bytes indicating the major
 number (currently 2) and the minor number (currently 1).  This magic can be
 used to quickly examine the file to determine that it's a BCF2 file.
-Immediately following the BCF2 magic is an unsigned 4-byte integer containing the length of the header text which includes the NULL terminator character.
-Follow the standard NULL-terminated VCF header lines in text format, beginning with \verb|##fileformat=VCFvX.Y|.
+Immediately following the BCF2 magic is an unsigned 4-byte integer containing the length of the header text which includes the NUL terminator character.
+Follow the standard NUL-terminated VCF header lines in text format, beginning with \verb|##fileformat=VCFvX.Y|.
 Because the type is
 encoded directly in the header, the recommended extension for BCF2 formatted
 files is {\sl .bcf}.  BCF2 supports encoding values in a dictionary of strings.
