--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1371,9 +1371,10 @@ Haplotype quality & 30 & 40 & 40 \\
 \pagebreak
 \subsection{Representing unspecified alleles and REF-only blocks (gVCF)}
 In order to report sequencing data evidence for both variant and non-variant positions in the genome, the VCF specification allows to represent blocks of reference-only calls in a single record using the END INFO tag, an idea originally introduced by the gVCF file format\footnote{\url{https://help.basespace.illumina.com/articles/descriptive/gvcf-files/}}.
-The convention adopted here is to represent reference evidence as likelihoods against an unknown alternate allele.
+
+The convention adopted here is to represent reference evidence as likelihoods against an unknown alternate allele represented as $<$*$>$.
 Think of this as the likelihood for reference as compared to any other possible alternate allele (both SNP, indel, or otherwise).
-A symbolic alternate allele $<$*$>$ is used to represent this unspecified alternate allele.
+The $<$*$>$ representation is preferred over the symbolic allele $<$NON\_REF$>$.
 
 Example records are given below:
 \scriptsize
